  . Fixed bug #69646 (OS command injection vulnerability in escapeshellarg).
    (CVE-2015-4642) (Anatol Belski)
  . Fixed bug #69719 (Incorrect handling of paths with NULs). (Stas)

- Litespeed SAPI:
  . Fixed bug #68812 (Unchecked return value). (George Wang)

- Mail:
  . Fixed bug #68776 (mail() does not have mail header injection prevention for
    additional headers). (Yasuo)

- Postgres:
  . Fixed bug #69667 (segfault in php_pgsql_meta_data). (CVE-2015-4644) (Remi)

- Sqlite3:
  . Upgrade bundled sqlite to 3.8.10.2. (CVE-2015-3414, CVE-2015-3415,
    CVE-2015-3416) (Kaplan)

14 May 2015 PHP 5.4.41

- Core: 
  . Fixed bug #69364 (PHP Multipart/form-data remote dos Vulnerability).
    (CVE-2015-4024) (Stas)
  . Fixed bug #69403 (str_repeat() sign mismatch based memory corruption). 
    (Stas)
  . Fixed bug #69418 (CVE-2006-7243 fix regressions in 5.4+). (CVE-2015-4025)
    (Stas)
  . Fixed bug #69522 (heap buffer overflow in unpack()). (Stas)
  
- FTP:
  . Fixed bug #69545 (Integer overflow in ftp_genlist() resulting in heap
    overflow). (CVE-2015-4022) (Stas)

- PCNTL:
  . Fixed bug #68598 (pcntl_exec() should not allow null char). (CVE-2015-4026)
    (Stas)

- PCRE
  . Upgraded pcrelib to 8.37. (CVE-2015-2325, CVE-2015-2326)

- Phar:
  . Fixed bug #69453 (Memory Corruption in phar_parse_tarfile when entry
    filename starts with null). (CVE-2015-4021) (Stas)

16 Apr 2015 PHP 5.4.40

- Apache2handler:
  . Fixed bug #69218 (potential remote code execution with apache 2.4
    apache2handler). (CVE-2015-3330) (Gerrit Venema)

- Core:
  . Additional fix for bug #69152 (Type confusion vulnerability in
    exception::getTraceAsString). (Stas)
  . Fixed bug #69337 (php_stream_url_wrap_http_ex() type-confusion
    vulnerability). (Stas)
  . Fixed bug #69353 (Missing null byte checks for paths in various PHP
    extensions). (Stas)

- cURL:
  . Fixed bug #69316 (Use-after-free in php_curl related to
    CURLOPT_FILE/_INFILE/_WRITEHEADER). (Laruence)

- Ereg: